--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <!-- Meta tags Obrigatórias -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
     <title>Olá, mundo!</title>
     <style> 
 
@@ -24,10 +21,10 @@
   <body class="container">
 <header>
     <div class="row">
-      <div class="col-2">
+      <div class="col-sm-2">
         CABECALHO
       </div>
-      <div class="col-10">
+      <div class="col-sm-10">
         CABECALHO
       </div>
     </div>
@@ -35,20 +32,20 @@
 
 <main>
     <div class="row">
-        <div class="col-12">
+        <div class="col-sm-12">
           MENU
         </div>
       </div>
     <div class="row">
-        <div class="col-12">
+        <div class="col-sm-12">
           MENU
         </div>
       </div>
 </main>
     <footer>
         <div class="row">
-            <div class="col-8">RODA PÉ</div>
-            <div class="col-4">RODA PÉ</div>
+            <div class="col-sm-8">RODA PÉ</div>
+            <div class="col-sm-4">RODA PÉ</div>
         </div>
     </footer>
 
