--- a/index.html
+++ b/index.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Olá, mundo!</title>
-    <style> 
 
-    body{
-        height: 100vh;
-        background-color: rgb(196, 196, 196);
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <title>Olá, mundo!</title>
+  <style>
+    body {
+      height: 100vh;
+      background-color: rgb(196, 196, 196);
+      display: grid;
+      grid-template-rows: auto 1fr auto;
     }
 
-    div{
-        border: 1px solid black;
+    div {
+      border: 1px solid black;
+      text-align: center;
     }
+  </style>
+</head>
 
-    </style>
-  </head>
-  <body class="container">
-<header>
+<body class="container">
+  <header>
     <div class="row">
-      <div class="col-sm-2">
-        CABECALHO
-      </div>
-      <div class="col-sm-10">
+      <div class="col">
         CABECALHO
       </div>
     </div>
-</header>
+  </header>
 
-<main>
+  <main>
     <div class="row">
-        <div class="col-sm-12">
-          MENU
-        </div>
+      <div class="col-sm-2">
+        MENU
       </div>
+      <div class="col-sm-10">
+        MENU
+      </div>
+    </div>
     <div class="row">
-        <div class="col-sm-12">
-          MENU
-        </div>
-      </div>
-</main>
-    <footer>
-        <div class="row">
-            <div class="col-sm-8">RODA PÉ</div>
-            <div class="col-sm-4">RODA PÉ</div>
-        </div>
-    </footer>
+      <div class="col-lg-6">OPICINAL</div>
+      <div class="col-lg-6">OPICIONAL</div>
+    </div>
+  </main>
+  <footer>
+    <div class="row">
+      <div class="col-sm-8">RODA PÉ</div>
+      <div class="col-sm-4">RODA PÉ</div>
+    </div>
+  </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
