--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     display: grid;
     grid-template-rows: auto 1fr auto;
   }
+
+  div{
+
+  }
  </style>
 <body>
 
@@ -98,13 +102,16 @@
   <footer class="container ">
       <div class="row">
         <div class="col">
-          1 de 3
+            chamada super legal
         </div>
+        <div class="col"></div>
         <div class="col">
-          2 de 3
+            <a href="">Saiba mais</a>
         </div>
-        <div class="col">
-          3 de 3
+      </div>
+      <div class="row mt-5">
+        <div class="col text-center">
+            <a href="">Roda-pé</a>
         </div>
       </div>
   </footer>
