Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -70,33 +70,18 @@
   </header>
   <main class="container">
     <div class="row">
-      <div class="col-sm"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum ab suscipit labore obcaecati
-        saepe ducimus consequatur doloremque! Facere recusandae esse adipisci, deleniti magnam deserunt cum sit ut vero
-        aut dolor? Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quibusdam alias nihil quae dolorem
-        recusandae dolorum, a autem asperiores! Rem atque necessitatibus consectetur maiores distinctio cupiditate,
-        voluptate vero veniam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit harum
-        sapiente cum pariatur enim a, alias soluta molestiae sequi laudantium atque iure exercitationem ab eaque
-        excepturi amet neque! Perspiciatis, autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-        asperiores rerum sapiente illum itaque doloribus molestiae quibusdam vitae. Et impedit quis consequuntur libero,
-        esse illo. Necessitatibus eos debitis ut quam. </div>
-      <div class="col-sm"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum ab suscipit labore obcaecati
-        saepe ducimus consequatur doloremque! Facere recusandae esse adipisci, deleniti magnam deserunt cum sit ut vero
-        aut dolor? Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quibusdam alias nihil quae dolorem
-        recusandae dolorum, a autem asperiores! Rem atque necessitatibus consectetur maiores distinctio cupiditate,
-        voluptate vero veniam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit harum
-        sapiente cum pariatur enim a, alias soluta molestiae sequi laudantium atque iure exercitationem ab eaque
-        excepturi amet neque! Perspiciatis, autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-        asperiores rerum sapiente illum itaque doloribus molestiae quibusdam vitae. Et impedit quis consequuntur libero,
-        esse illo. Necessitatibus eos debitis ut quam. </div>
-      <div class="col-sm"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum ab suscipit labore obcaecati
-        saepe ducimus consequatur doloremque! Facere recusandae esse adipisci, deleniti magnam deserunt cum sit ut vero
-        aut dolor? Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quibusdam alias nihil quae dolorem
-        recusandae dolorum, a autem asperiores! Rem atque necessitatibus consectetur maiores distinctio cupiditate,
-        voluptate vero veniam vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit harum
-        sapiente cum pariatur enim a, alias soluta molestiae sequi laudantium atque iure exercitationem ab eaque
-        excepturi amet neque! Perspiciatis, autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-        asperiores rerum sapiente illum itaque doloribus molestiae quibusdam vitae. Et impedit quis consequuntur libero,
-        esse illo. Necessitatibus eos debitis ut quam. </div>
+      <div class="col-sm">
+          <h1>Quem somos</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores placeat delectus totam quo dolor autem, aperiam asperiores ratione numquam minima accusamus nihil optio! Nam ducimus totam unde voluptates exercitationem!</p>
+      </div>
+      <div class="col-sm">
+        <h1>Direito penal</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque quasi voluptatum maiores corporis natus iste asperiores eos necessitatibus temporibus officiis laboriosam, soluta ut deleniti facere minus alias ipsum? Maxime, aut?</p>
+        <h1>Orientação e defesa técnica</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae minima maiores provident placeat ducimus id deleniti, voluptatem rerum ipsam neque obcaecati cupiditate quo eius minus illum rem asperiores, ea praesentium?</p>
+      </div>
+      <div class="col-sm"><h1>localização</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3842.2691921205114!2d-47.662310324779675!3d-15.630647318944527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a133c31d28571%3A0x2a75bc0e0f962e1b!2sCentro%20Educacional%20Stella%20dos%20Cherubins%20Guimar%C3%A3es%20Trois!5e0!3m2!1spt-BR!2sbr!4v1726483321694!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
   </main>
   <footer class="container ">
