Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     grid-template-rows: auto 1fr auto;
   }
 
-  div{
-
-  }
+.contate{
+  background-color: red;
+}
  </style>
 <body>
 
@@ -85,18 +85,29 @@
     </div>
   </main>
   <footer class="container ">
-      <div class="row">
-        <div class="col">
-            chamada super legal
+      <div class="row contate">
+        <div class="-3">
+          <img src="" alt="imagem">
         </div>
-        <div class="col"></div>
-        <div class="col">
-            <a href="">Saiba mais</a>
+        <div class="col-7"></div>
+        <div class="col-2">
+          <h1 class="h5">Ligue agora</h1>
+
+          <div>
+            <img src="" alt="Logo email">
+            dominique.toreto@gmail.com
+          </div>
+          <div>
+            <img src="" alt="Logo contatio"> 
+            (61) 99465-72845
+          </div>
+          <div class="logos">shydsvdfvdfbdbdfb</div>
         </div>
       </div>
       <div class="row mt-5">
         <div class="col text-center">
-            <a href="">Roda-pé</a>
+            <p>@2024 Luiz Gustavo | Curso técnico Ced Stella</p>
+            <p>Todos os direitos reservados</p>
         </div>
       </div>
   </footer>
