--- a/Trabalho-template-Bootstrap/index.html
+++ b/Trabalho-template-Bootstrap/index.html
@@ -121,7 +121,7 @@
           back-end, e aplicações móveis. Juntos, buscamos constantemente a inovação e a excelência em cada projeto que
           abraçamos.</p>
         <hr>
-        <h3>Jhon Walace</h3>
+        <h3>Jhone Panda</h3>
         <p>Especialista em front-end, com forte domínio de HTML, CSS e JavaScript. Ele é responsável por criar
           interfaces de usuário atrativas e funcionais.</p>
         <hr>
@@ -129,11 +129,11 @@
         <p>Desenvolvedora back-end com ampla experiência em Python e Node.js. Mariana é a responsável pela lógica de
           negócios e integração de sistemas.</p>
         <hr>
-        <h3>KKKKKKKKKKKKKKKKKKKKKKK</h3>
+        <h3>Menina da Bota</h3>
         <p>Focado em desenvolvimento mobile, ele cria aplicativos nativos e híbridos, garantindo uma experiência fluida
           para os usuários.</p>
         <hr>
-        <h3>KKKKKKKKKKKKKKKKKKKKKKKK</h3>
+        <h3>Adrielem</h3>
         <p>Especialista em banco de dados e DevOps, ela gerencia a infraestrutura e a segurança dos nossos projetos,
           assegurando alta disponibilidade e performance.</p>
 
